--- a/pages/administrador/adminUsuarios.html
+++ b/pages/administrador/adminUsuarios.html
@@ -88,12 +88,13 @@
         <h2><i class="bi bi-people"></i> Usuarios</h2>
         <hr>
         <section class="table-responsive"> 
-            <button class="btn btn-agregar my-2"><i class="bi bi-plus-square"></i> Nuevo</button>
+            <button class="btn btn-agregar my-2" data-bs-toggle="modal"
+            data-bs-target="#form"><i class="bi bi-plus-square"></i> Nuevo</button>
             <table class="table table-striped">
                 <thead>
                   <tr>
                     <th scope="col">#</th>
-                    <th scope="col">Nombre</th>
+                    <th scope="col">Nombre y apellido</th>
                     <th scope="col">Email</th>
                     <th scope="col">Contraseña</th>
                     <th scope="col">Estado</th>
@@ -117,6 +118,7 @@
                 </tbody>
               </table>
         </section>
+
     </main>
     <footer>
         <section class="row  text-center container mx-auto">
@@ -144,10 +146,107 @@
           <p>© Copyrights 2024- Todos Los Derechos Reservados</p>
         </div>
       </footer>
+      <div
+      class="modal fade"
+      id="form"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">
+              Administrador
+            </h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form id="form-usuario">
+              <div class="mb-3">
+                <label for="codigo" class="form-label">Codigo</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="codigo"
+                  placeholder="0001"
+                  minlength="3"
+                  maxlength="100"
+                  disabled
+                />
+              </div>
+              <div class="mb-3">
+                <label for="nombre" class="form-label">Nombre y Apellido*</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="nombre"
+                  placeholder="Nombre"
+                  minlength="3"
+                  maxlength="100"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="categoria" class="form-label">Correo electronico*</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="email"
+                  placeholder="Correo electronico"
+                  minlength="3"
+                  maxlength="100"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="categoria" class="form-label">Contraseña*</label>
+                <input
+                  type="password"
+                  class="form-control"
+                  id="password"
+                  placeholder="Contraseña"
+                  minlength="8"
+                  maxlength="16"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="estado" class="form-label">Estado*</label>
+                <select class="form-select" id="estado" aria-label="Default select example">
+                  <option selected value="">Selecciona una opción</option>
+                  <option value="activo">Activo</option>
+                  <option value="inactivo">Inactivo</option>
+                </select>
+              </div>
+              <div class="mb-3">
+                <label for="estado" class="form-label">Perfil*</label>
+                <select class="form-select" id="perfil" aria-label="Default select example">
+                  <option selected value="">Selecciona una opción</option>
+                  <option value="administrador">Administrador</option>
+                </select>
+              </div>
+              <div class="alert alert-danger mt-3 d-none" role="alert" id="alerta"></div>
+              <div class="mb-3">
+                <button type="submit" class="btn btn-iniciar">Enviar</button>
+              </div>
+            </form>
+          </div>
+          
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/uuid@latest/dist/umd/uuidv4.min.js"></script>
+    <script type="module" src="../../js/administradorUsuario.js"></script>
   </body>
 </html>
