--- a/pages/administrador/adminUsuarios.html
+++ b/pages/administrador/adminUsuarios.html
@@ -85,70 +85,84 @@
       </nav>
     </header>
     <main class="administrador container mb-5">
-        <h2><i class="bi bi-people"></i> Usuarios</h2>
-        <hr>
-        <section class="table-responsive"> 
-            <button class="btn btn-agregar my-2" data-bs-toggle="modal"
-            data-bs-target="#form"><i class="bi bi-plus-square"></i> Nuevo</button>
-            <table class="table table-striped">
-                <thead>
-                  <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Nombre y apellido</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Contraseña</th>
-                    <th scope="col">Estado</th>
-                    <th scope="col">Perfil</th>
-                    <th scope="col">Opciones</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Ivan</td>
-                    <td>silvaivan280@gmail.com</td>
-                    <td>123456789</td>
-                    <td>Activo</td>
-                    <td>Administrador</td>
-                    <td>
-                        <button class="btn btn-danger"><i class="bi bi-trash3"></i></button>
-                        <button class="btn btn-warning"><i class="bi bi-pencil-square"></i></button>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-        </section>
-
+      <h2><i class="bi bi-people"></i> Usuarios</h2>
+      <hr />
+      <section class="table-responsive">
+        <button class="btn btn-agregar my-2" id="btnCrearUsuario"  >
+          <i class="bi bi-plus-square"></i> Nuevo
+        </button>
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Nombre y apellido</th>
+              <th scope="col">Email</th>
+              <th scope="col">Contraseña</th>
+              <th scope="col">Estado</th>
+              <th scope="col">Perfil</th>
+              <th scope="col">Opciones</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">1</th>
+              <td>Ivan</td>
+              <td>silvaivan280@gmail.com</td>
+              <td>123456789</td>
+              <td>Activo</td>
+              <td>Administrador</td>
+              <td>
+                <button class="btn btn-danger">
+                  <i class="bi bi-trash3"></i>
+                </button>
+                <button class="btn btn-warning">
+                  <i class="bi bi-pencil-square"></i>
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
     </main>
     <footer>
-        <section class="row  text-center container mx-auto">
-          <div class="col-md-4 mt-4">
-           <a href="index.html"><img class="footer-logo my-5" src="../../img/logo_large.png" alt=""></a>
-          </div>
-          <div class="col-md-4 mt-4">
-            <h5>Horarios:</h5>
-            <p>Lunes: 07:00 - 00:30 - Martes: 07:00 - 00:30</p>
-            <p>Miércoles: 07:00 - 00:30 - Jueves: 07:00 - 00:30</p>
-            <p>Viernes: 07:00 - 01:00 - Sábado: 08:00 - 01:00</p>
-            <p>Domingo: 09:00 - 13:00</p>
-          </div>
-          <div class="col-md-4 mt-4">
-            <h5>Nuestras redes</h5>
-            <div>
-              <a href="../../pages/error404.html"><i class="icono bi bi-facebook"></i></a>
-              <a class="mx-3" href="../../pages/error404.html"><i class="icono bi bi-twitter-x"></i></a>
-              <a href="../../pages/error404.html"><i class="icono bi bi-instagram"></i></a>
-  
-            </div>
-          </div>
-        </section>
-        <div class="text-center mt-3 copy">
-          <p>© Copyrights 2024- Todos Los Derechos Reservados</p>
+      <section class="row text-center container mx-auto">
+        <div class="col-md-4 mt-4">
+          <a href="index.html"
+            ><img
+              class="footer-logo my-5"
+              src="../../img/logo_large.png"
+              alt=""
+          /></a>
         </div>
-      </footer>
-      <div
+        <div class="col-md-4 mt-4">
+          <h5>Horarios:</h5>
+          <p>Lunes: 07:00 - 00:30 - Martes: 07:00 - 00:30</p>
+          <p>Miércoles: 07:00 - 00:30 - Jueves: 07:00 - 00:30</p>
+          <p>Viernes: 07:00 - 01:00 - Sábado: 08:00 - 01:00</p>
+          <p>Domingo: 09:00 - 13:00</p>
+        </div>
+        <div class="col-md-4 mt-4">
+          <h5>Nuestras redes</h5>
+          <div>
+            <a href="../../pages/error404.html"
+              ><i class="icono bi bi-facebook"></i
+            ></a>
+            <a class="mx-3" href="../../pages/error404.html"
+              ><i class="icono bi bi-twitter-x"></i
+            ></a>
+            <a href="../../pages/error404.html"
+              ><i class="icono bi bi-instagram"></i
+            ></a>
+          </div>
+        </div>
+      </section>
+      <div class="text-center mt-3 copy">
+        <p>© Copyrights 2024- Todos Los Derechos Reservados</p>
+      </div>
+    </footer>
+    <div
       class="modal fade"
-      id="form"
+      id="modalFormUsuario"
       tabindex="-1"
       aria-labelledby="exampleModalLabel"
       aria-hidden="true"
@@ -169,11 +183,11 @@
           <div class="modal-body">
             <form id="form-usuario">
               <div class="mb-3">
-                <label for="codigo" class="form-label">Codigo</label>
+                <label for="codigoUsuarioAdmin" class="form-label">Codigo</label>
                 <input
                   type="text"
                   class="form-control"
-                  id="codigo"
+                  id="codigoUsuarioAdmin"
                   placeholder="0001"
                   minlength="3"
                   maxlength="100"
@@ -181,11 +195,13 @@
                 />
               </div>
               <div class="mb-3">
-                <label for="nombre" class="form-label">Nombre y Apellido*</label>
+                <label for="nombreUsuarioAdmin" class="form-label"
+                  >Nombre y Apellido*</label
+                >
                 <input
                   type="text"
                   class="form-control"
-                  id="nombre"
+                  id="nombreUsuarioAdmin"
                   placeholder="Nombre"
                   minlength="3"
                   maxlength="100"
@@ -193,11 +209,13 @@
                 />
               </div>
               <div class="mb-3">
-                <label for="categoria" class="form-label">Correo electronico*</label>
+                <label for="emailUsuarioAdmin" class="form-label"
+                  >Correo electronico*</label
+                >
                 <input
                   type="email"
                   class="form-control"
-                  id="email"
+                  id="emailUsuarioAdmin"
                   placeholder="Correo electronico"
                   minlength="3"
                   maxlength="100"
@@ -205,11 +223,11 @@
                 />
               </div>
               <div class="mb-3">
-                <label for="categoria" class="form-label">Contraseña*</label>
+                <label for="passwordUsuarioAdmin" class="form-label">Contraseña*</label>
                 <input
                   type="password"
                   class="form-control"
-                  id="password"
+                  id="passwordUsuarioAdmin"
                   placeholder="Contraseña"
                   minlength="8"
                   maxlength="16"
@@ -217,27 +235,38 @@
                 />
               </div>
               <div class="mb-3">
-                <label for="estado" class="form-label">Estado*</label>
-                <select class="form-select" id="estado" aria-label="Default select example">
+                <label for="estadoUsuarioAdmin" class="form-label">Estado*</label>
+                <select
+                  class="form-select"
+                  id="estadoUsuarioAdmin"
+                  aria-label="Default select example"
+                >
                   <option selected value="">Selecciona una opción</option>
                   <option value="activo">Activo</option>
                   <option value="inactivo">Inactivo</option>
                 </select>
               </div>
               <div class="mb-3">
-                <label for="estado" class="form-label">Perfil*</label>
-                <select class="form-select" id="perfil" aria-label="Default select example">
+                <label for="perfilUsuarioAdmin" class="form-label">Perfil*</label>
+                <select
+                  class="form-select"
+                  id="perfilUsuarioAdmin"
+                  aria-label="Default select example"
+                >
                   <option selected value="">Selecciona una opción</option>
                   <option value="administrador">Administrador</option>
                 </select>
               </div>
-              <div class="alert alert-danger mt-3 d-none" role="alert" id="alerta"></div>
+              <div
+                class="alert alert-danger mt-3 d-none"
+                role="alert"
+                id="alerta"
+              ></div>
               <div class="mb-3">
                 <button type="submit" class="btn btn-iniciar">Enviar</button>
               </div>
             </form>
           </div>
-          
         </div>
       </div>
     </div>
