--- a/pages/administrador/adminProductos.html
+++ b/pages/administrador/adminProductos.html
@@ -108,25 +108,8 @@
               <th scope="col">Opciones</th>
             </tr>
           </thead>
-          <tbody>
-            <tr>
-              <th scope="row">1</th>
-              <td>Pizza</td>
-              <td>Pizzas</td>
-              <td>
-                https://images.pexels.com/photos/1653877/pexels-photo-1653877.jpeg
-              </td>
-              <td>$3000</td>
-              <td>Activo</td>
-              <td>
-                <button class="btn btn-danger">
-                  <i class="bi bi-trash3"></i>
-                </button>
-                <button class="btn btn-warning">
-                  <i class="bi bi-pencil-square"></i>
-                </button>
-              </td>
-            </tr>
+          <tbody id="tablaProdutos">
+            
           </tbody>
         </table>
       </section>
