--- a/pages/categorias/bebidas.html
+++ b/pages/categorias/bebidas.html
@@ -219,5 +219,7 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/uuid@latest/dist/umd/uuidv4.min.js"></script>
+    <script type="module" src="../../js/menuBebidas.js"></script>
 </body>
 </html>
