--- a/pages/menu.html
+++ b/pages/menu.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="web de restaurante" />
     <meta name="keywords" content="restaurante" />
     <meta name="author" content="Ivan Silva" />
@@ -18,297 +18,196 @@
     />
     <link rel="stylesheet" href="../css/estilos.css" />
     <title>El Rincón del Sabor</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="bg-dark">
-          <div class="d-flex container justify-content-between p-1">
-            <p class="my-auto">Reservación: (381) 692734</p>
-            <div class="my-auto">
-              <a href="../pages/error404.html"><i class="icono bi bi-facebook"></i></a>
-              <a class="mx-3" href="../pages/error404.html"><i class="icono bi bi-twitter-x"></i></a>
-              <a href="../pages/error404.html"><i class="icono bi bi-instagram"></i></a>
-            </div>
+      <div class="bg-dark">
+        <div class="d-flex container justify-content-between p-1">
+          <p class="my-auto">Reservación: (381) 692734</p>
+          <div class="my-auto">
+            <a href="../pages/error404.html"
+              ><i class="icono bi bi-facebook"></i
+            ></a>
+            <a class="mx-3" href="../pages/error404.html"
+              ><i class="icono bi bi-twitter-x"></i
+            ></a>
+            <a href="../pages/error404.html"
+              ><i class="icono bi bi-instagram"></i
+            ></a>
           </div>
         </div>
-        <nav class="navbar navbar-expand-lg bg-nav position-fixed w-100">
-          <div class="container-fluid py-2 mt-3">
-            <a class="navbar-brand" href="../index.html"
-              ><img class="logo" src="../img/logo_large.png" alt=""
-            /></a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" href="../index.html"
-                    ><i class="bi bi-house-door"></i> Inicio</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="../pages/carrito.html"
-                    ><i class="bi bi-cart"></i> Pedidos</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#"
-                    ><i class="bi bi-tools"></i> Administrador</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#"
-                    ><i class="bi bi-person-circle"></i> Iniciar sesión</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#"
-                    ><i class="bi bi-box-arrow-left"></i> Cerrar sesión</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#"
-                    ><i class="bi bi-people"></i> Registrarse</a
-                  >
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-        <div
-          id="carouselExampleInterval"
-          class="carousel slide"
-          data-bs-ride="carousel"
-        >
-          <div class="carousel-inner">
-            <div class="carousel-item portada active" data-bs-interval="2000">
-              <img
-                class="img-fluid"
-                src="../img/slaider/slaider-1.jpeg"
-                class="d-block w-100"
-                alt="carousel"
-              />
-            </div>
-            <div class="carousel-item portada" data-bs-interval="2000">
-              <img
-                class="img-fluid"
-                src="../img/slaider/slaider-2.jpeg"
-                class="d-block w-100"
-                alt="carousel"
-              />
-            </div>
-            <div class="carousel-item portada" data-bs-interval="2000">
-              <img
-                class="img-fluid"
-                src="../img/slaider/slaider-3.jpeg"
-                class="d-block w-100"
-                alt="carousel"
-              />
-            </div>
-          </div>
+      </div>
+      <nav class="navbar navbar-expand-lg bg-nav position-fixed w-100">
+        <div class="container-fluid py-2 mt-3">
+          <a class="navbar-brand" href="../index.html"
+            ><img class="logo" src="../img/logo_large.png" alt=""
+          /></a>
           <button
-            class="carousel-control-prev"
+            class="navbar-toggler"
             type="button"
-            data-bs-target="#carouselExampleInterval"
-            data-bs-slide="prev"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
           >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
+            <span class="navbar-toggler-icon"></span>
           </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#carouselExampleInterval"
-            data-bs-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-      </header>
-      <main>
-        <section>
-            <ul class="navbar-nav menu-especialidades ms-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="./categorias/sandwiches.html">SÁNDWICHES</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./categorias/pizzas.html">PIZZAS</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./categorias/bebidas.html">BEBIDAS</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./categorias/postres.html">POSTRES</a>
-                </li>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" href="../index.html"
+                  ><i class="bi bi-house-door"></i> Inicio</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/carrito.html"
+                  ><i class="bi bi-cart"></i> Pedidos</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"
+                  ><i class="bi bi-tools"></i> Administrador</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"
+                  ><i class="bi bi-person-circle"></i> Iniciar sesión</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"
+                  ><i class="bi bi-box-arrow-left"></i> Cerrar sesión</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"
+                  ><i class="bi bi-people"></i> Registrarse</a
+                >
+              </li>
             </ul>
-        </section>
-        <section class="container my-3">
-          <h2 class="texto-menu">Nuestro menú</h2>
-          <hr class="linea-menu">
-        </section>
-        <div class="row row-cols-3 my-5  text-center menu-sandwich justify-content-evenly">
-          <div class="col col-sm-12 card-menu">
-            <div class="card-img">
-                <img class="img-fluid" src="../../img/cat-sandwiches/sandwich.png" alt="">
-            </div>
-            <div class="card-bg py-2">
-                <h5>Sándwich</h5>
-                <p>$3000</p>
-                <button class="btn">Agregar a pedidos</button>
-            </div>
-          </div>
-          <div class="col col-sm-12 card-menu">
-            <div class="card-img">
-                <img class="img-fluid" src="../../img/cat-sandwiches/sandwich.png" alt="">
-            </div>
-            <div class="card-bg py-2">
-                <h5>Sándwich</h5>
-                <p>$3000</p>
-                <button class="btn">Agregar a pedidos</button>
-            </div>
-          </div>
-          <div class="col col-sm-12 card-menu">
-            <div class="card-img">
-                <img class="img-fluid" src="../../img/cat-sandwiches/sandwich.png" alt="">
-            </div>
-            <div class="card-bg py-2">
-                <h5>Sándwich</h5>
-                <p>$3000</p>
-                <button class="btn">Agregar a pedidos</button>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-12 card-menu">
-            <div class="card-img">
-                <img class="img-fluid" src="../../img/cat-pizzas/pizzas.png" alt="">
-            </div>
-            <div class="card-bg ">
-                <h5>Pizza</h5>
-                <p>$3500</p>
-                <button class="btn">Agregar a pedidos</button>
-            </div>
-          </div>
-          <div class="col col-sm-12 card-menu">
-            <div class="card-img">
-                <img class="img-fluid" src="../../img/cat-pizzas/pizzas.png" alt="">
-            </div>
-            <div class="card-bg py-2">
-                <h5>Pizza</h5>
-                <p>$3500</p>
-                <button class="btn">Agregar a pedidos</button>
-            </div>
-          </div>
-          <div class="col col-sm-12 card-menu">
-            <div class="card-img">
-                <img class="img-fluid" src="../../img/cat-pizzas/pizzas.png" alt="">
-            </div>
-            <div class="card-bg py-2">
-                <h5>Pizza</h5>
-                <p>$3500</p>
-                <button class="btn">Agregar a pedidos</button>
-            </div>
-          </div>
-          <div class="col col-sm-12 card-menu">
-            <div class="card-img">
-                <img class="img-fluid" src="../../img/cat-postres/postres.jpeg" alt="">
-            </div>
-            <div class="card-bg py-2">
-                <h5>Pizza</h5>
-                <p>$3500</p>
-                <button class="btn">Agregar a pedidos</button>
-            </div>
-          </div>
-          <div class="col col-sm-12 card-menu">
-            <div class="card-img">
-                <img class="img-fluid" src="../../img/cat-postres/postres.jpeg" alt="">
-            </div>
-            <div class="card-bg py-2">
-                <h5>Pizza</h5>
-                <p>$3500</p>
-                <button class="btn">Agregar a pedidos</button>
-            </div>
-          </div>
-          <div class="col col-sm-12 card-menu">
-            <div class="card-img">
-                <img class="img-fluid" src="../../img/cat-postres/postres.jpeg" alt="">
-            </div>
-            <div class="card-bg py-2">
-                <h5>Pizza</h5>
-                <p>$3500</p>
-                <button class="btn">Agregar a pedidos</button>
-            </div>
-          </div>
-          <div class="col col-sm-12 card-menu">
-            <div class="card-img">
-                <img class="img-fluid" src="../../img/cat-bebidas/vinos.jpeg" alt="">
-            </div>
-            <div class="card-bg py-2">
-                <h5>Pizza</h5>
-                <p>$3500</p>
-                <button class="btn">Agregar a pedidos</button>
-            </div>
-          </div>
-          <div class="col col-sm-12 card-menu">
-            <div class="card-img">
-                <img class="img-fluid" src="../../img/cat-bebidas/vinos.jpeg" alt="">
-            </div>
-            <div class="card-bg py-2">
-                <h5>Pizza</h5>
-                <p>$3500</p>
-                <button class="btn">Agregar a pedidos</button>
-            </div>
-          </div>
-          <div class="col col-sm-12 card-menu">
-            <div class="card-img">
-                <img class="img-fluid" src="../../img/cat-bebidas/vinos.jpeg" alt="">
-            </div>
-            <div class="card-bg py-2">
-                <h5>Pizza</h5>
-                <p>$3500</p>
-                <button class="btn">Agregar a pedidos</button>
-            </div>
           </div>
         </div>
-        
-      </main>
-      <footer>
-        <section class="row  text-center container mx-auto">
-          <div class="col-md-4 mt-4">
-           <a href="../index.html"><img class="footer-logo my-5" src="../img/logo_large.png" alt=""></a>
+      </nav>
+      <div
+        id="carouselExampleInterval"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item portada active" data-bs-interval="2000">
+            <img
+              class="img-fluid"
+              src="../img/slaider/slaider-1.jpeg"
+              class="d-block w-100"
+              alt="carousel"
+            />
           </div>
-          <div class="col-md-4 mt-4">
-            <h5>Horarios:</h5>
-            <p>Lunes: 07:00 - 00:30 - Martes: 07:00 - 00:30</p>
-            <p>Miércoles: 07:00 - 00:30 - Jueves: 07:00 - 00:30</p>
-            <p>Viernes: 07:00 - 01:00 - Sábado: 08:00 - 01:00</p>
-            <p>Domingo: 09:00 - 13:00</p>
+          <div class="carousel-item portada" data-bs-interval="2000">
+            <img
+              class="img-fluid"
+              src="../img/slaider/slaider-2.jpeg"
+              class="d-block w-100"
+              alt="carousel"
+            />
           </div>
-          <div class="col-md-4 mt-4">
-            <h5>Nuestras redes</h5>
-            <div>
-              <a href="../pages/error404.html"><i class="icono bi bi-facebook"></i></a>
-              <a class="mx-3" href="../pages/error404.html"><i class="icono bi bi-twitter-x"></i></a>
-              <a href="../pages/error404.html"><i class="icono bi bi-instagram"></i></a>
-  
-            </div>
+          <div class="carousel-item portada" data-bs-interval="2000">
+            <img
+              class="img-fluid"
+              src="../img/slaider/slaider-3.jpeg"
+              class="d-block w-100"
+              alt="carousel"
+            />
           </div>
-        </section>
-        <div class="text-center mt-3 copy">
-          <p>© Copyrights 2024- Todos Los Derechos Reservados</p>
         </div>
-      </footer>
-      <script
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleInterval"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleInterval"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </header>
+    <main>
+      <section>
+        <ul class="navbar-nav menu-especialidades ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="./categorias/sandwiches.html"
+              >SÁNDWICHES</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./categorias/pizzas.html">PIZZAS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./categorias/bebidas.html">BEBIDAS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./categorias/postres.html">POSTRES</a>
+          </li>
+        </ul>
+      </section>
+      <section class="container my-3">
+        <h2 class="texto-menu">Nuestro menú</h2>
+        <hr class="linea-menu" />
+      </section>
+      <div
+        class="row row-cols-3 my-5 text-center menu-sandwich justify-content-evenly"
+        id="row"
+      ></div>
+      
+    </main>
+    <footer>
+      <section class="row text-center container mx-auto">
+        <div class="col-md-4 mt-4">
+          <a href="../index.html"
+            ><img class="footer-logo my-5" src="../img/logo_large.png" alt=""
+          /></a>
+        </div>
+        <div class="col-md-4 mt-4">
+          <h5>Horarios:</h5>
+          <p>Lunes: 07:00 - 00:30 - Martes: 07:00 - 00:30</p>
+          <p>Miércoles: 07:00 - 00:30 - Jueves: 07:00 - 00:30</p>
+          <p>Viernes: 07:00 - 01:00 - Sábado: 08:00 - 01:00</p>
+          <p>Domingo: 09:00 - 13:00</p>
+        </div>
+        <div class="col-md-4 mt-4">
+          <h5>Nuestras redes</h5>
+          <div>
+            <a href="../pages/error404.html"
+              ><i class="icono bi bi-facebook"></i
+            ></a>
+            <a class="mx-3" href="../pages/error404.html"
+              ><i class="icono bi bi-twitter-x"></i
+            ></a>
+            <a href="../pages/error404.html"
+              ><i class="icono bi bi-instagram"></i
+            ></a>
+          </div>
+        </div>
+      </section>
+      <div class="text-center mt-3 copy">
+        <p>© Copyrights 2024- Todos Los Derechos Reservados</p>
+      </div>
+    </footer>
+    <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/uuid@latest/dist/umd/uuidv4.min.js"></script>
+    <script type="module" src="../js/menu.js"></script>
+  </body>
 </html>
