agregue el read de la categoria bebidas

--- a/pages/categorias/bebidas.html
+++ b/pages/categorias/bebidas.html
@@ -153,37 +153,8 @@
         </section>
         <section class="my-5">
             <div class="container text-center">
-                <div class="row mt-4 menu-sandwich justify-content-evenly">
-                  <div class="col-md-4 col-sm-12 card-menu">
-                    <div class="card-img">
-                        <img class="img-fluid" src="../../img/cat-bebidas/vinos.jpeg" alt="">
-                    </div>
-                    <div class="card-bg ">
-                        <h5>Pizza</h5>
-                        <p>$3500</p>
-                        <button class="btn">Agregar a pedidos</button>
-                    </div>
-                  </div>
-                  <div class="col-md-4 col-sm-12 card-menu">
-                    <div class="card-img">
-                        <img class="img-fluid" src="../../img/cat-bebidas/vinos.jpeg" alt="">
-                    </div>
-                    <div class="card-bg py-2">
-                        <h5>Pizza</h5>
-                        <p>$3500</p>
-                        <button class="btn">Agregar a pedidos</button>
-                    </div>
-                  </div>
-                  <div class="col-md-4 col-sm-12 card-menu">
-                    <div class="card-img">
-                        <img class="img-fluid" src="../../img/cat-bebidas/vinos.jpeg" alt="">
-                    </div>
-                    <div class="card-bg">
-                        <h5>Pizza</h5>
-                        <p>$3500</p>
-                        <button class="btn">Agregar a pedidos</button>
-                    </div>
-                  </div>
+                <div class="row mt-4 menu-sandwich justify-content-evenly" id="row">
+                  
                 </div>
               </div>
         </section>
